# screen_capture

./: .gitignore  AI_SUMMARY_IMPLEMENTATION_REPORT.md  AI_SUMMARY_TEST_GUIDE.md  AI_TECHNICAL_SUMMARY.md  BATCH_SUMMARY_UPDATE.md  CMakeLists.bak  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  INSTALLER_README.md  Info.plist.in  LICENSE  PHASE3_DEVELOPMENT_PLAN.md  README.md  THINKING_MODEL_FIX_REPORT.md  VIDEO_AI_SUMMARY_GUIDE.md  VIDEO_SUMMARY_GUIDE.md  build_and_test.bat  build_and_test.sh  build_installer.bat  create_installer.bat  create_installer_simple.bat  install_ffmpeg.bat  installer_en.nsi  test_delay_recording.bat  test_output_settings.bat  test_resolution_detection.cpp  test_three_fixes.bat
docs/: architecture.md  build_and_run_macos.md  core_engine_design.md  delay_recording_guide.md  feature_comparison.md  output_settings_guide.md  packaging_and_deployment.md  platform_layer_design.md  recording_duration_fix.md  service_layer_design.md  test_plan.md  three_fixes_report.md  time_sync_fix.md  timer_feature_guide.md  timing_accuracy_explanation.md  ui_layer_design.md
include/: AVSyncer.h  AudioPreprocessor.h  DataTypes.h  FileBrowserWidget.h  FileManager.h  IAudioCapture.h  ILocalCapture.h  ILocalEncoder.h  LocalFileWriter.h  LocalScheduler.h  MainWindow.h  RecordingControlPanel.h  RecordingService.h  ResourceAwareEncoder.h  SchedulerWidget.h  SettingsDialog.h  SettingsManager.h  SimpleCapture.h  VideoPreprocessor.h
packaging/: aicp.desktop.in
resources/: app_icon.rc  resources.qrc
src/: AISummaryConfigDialog.cpp  AISummaryConfigDialog.h  AIVisionAnalyzer.cpp  AIVisionAnalyzer.h  CMakeLists.txt  MacOSAudioCapture.mm  MacOSCapture.mm  MainWindow.cpp  MainWindow.h  RealTimeAIVisionAnalyzer.cpp  RealTimeAIVisionAnalyzer.h  RealTimeFrameExtractor.cpp  RealTimeFrameExtractor.h  RealTimeVideoSummaryManager.cpp  RealTimeVideoSummaryManager.h  RecordingService.cpp  RecordingService.h  SimpleCapture.h  SimpleCapture.mm  SimpleCapture_linux.cpp  SimpleCapture_win.cpp  SimpleMainWindow.cpp  VideoFrameExtractor.cpp  VideoFrameExtractor.h  VideoSummaryManager.cpp  VideoSummaryManager.h  main.cpp
